fixed the alignment issue

--- a/Milestone-2/module-10/style.css
+++ b/Milestone-2/module-10/style.css
@@ -31,6 +31,7 @@
   header ul{
     list-style: none;
     gap: 30px;
+    padding-left: 0;
   }
   .header-title{
     font-size: 3rem;
@@ -111,10 +112,13 @@
     margin-bottom: 100px;
   }
   .facts-card-container{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
+    display: flex;
+    flex-wrap: wrap;
     margin-top: 50px;
     gap: 20px;
+    justify-content: center;
+    align-items: center;
+    width: auto;
   }
   .fact-card{
     border: 1.5px solid rgb(255, 144, 14);
@@ -193,6 +197,35 @@
         align-items: center;
     }
     .sponsor-img-container{
-        grid-template-columns: repeat(1, 1fr);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;        
     }
   }
+
+    /* responsive design for medium devices */
+    @media screen and (min-width: 576px) and (max-width: 960px)  {
+        header ul, 
+        nav,
+        .more-features{
+            flex-direction: column;
+        }  
+        .features-img-container, .facts-card-container{
+            grid-template-columns: repeat(2, 1fr);
+        }
+        .features{
+            flex-direction: column;
+            gap: 30px
+        }
+        .features-text{
+            justify-content: center;
+            align-items: center;
+        }
+        .sponsor-img-container{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+        }
+      }
